use ProcessBuilder instead of Runtime.exec() to execute external commands